Changed placeholder text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div id = "game-text-div">
-     <h2 id="game-text">test</h2>
+     <h2 id="game-text">Lorem Ipsum</h2>
     </div>
     <script src="zork-like.js"></script>
   </body>
