--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
       <h1>Zork</h1>
       <button>Start Game</button>
     </div>
-
-    <div id = "game-text-div">
-     <h2 id="game-text">Lorem Ipsum</h2>
+    <div>
+     <h2 class="game-text">Lorem Ipsum</h2>
     </div>
     <script src="zork-like.js"></script>
   </body>
