Game text now has highlighted element to aid the player. Player input is functional now. Written a basic comparison function for input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <button>Start Game</button>
     </div>
     <div>
-     <h2 class="game-text">Lorem Ipsum</h2>
+     <h2 class="game-text"><span class="plain-text">Lorem Ipsum </span><span class="hint-text">test</span></h2>
+    </div>
+    <div>
+      <form>
+        <input type="text" class="playerInput" autofocus="true" onblur="this.focus()">
+      </form>
     </div>
     <script src="zork-like.js"></script>
   </body>
