Inventory almost done, fixed transition issues, other bug fixes

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
       <h1>Zork</h1>
       <button>Start Game</button>
     </div>
-    <div>
-     <h2 class="game-text"><span class="plain-text">Lorem Ipsum </span><span class="hint-text">test</span></h2>
+    <div class="text">
+     <h2 class="game-text">
+      <span class="plain-text">Lorem Ipsum </span>
+      <span class="hint-text">test</span>
+    </h2>
     </div>
     <div>
       <form>
-        <input type="text" class="playerInput" autofocus="true" onblur="this.focus()">
+        <input type="text" class="playerInput" autofocus="true">
       </form>
     </div>
     <script src="zork-like.js"></script>
