--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Zork-like game</title>
+    <title>Mort</title>
   </head>
   <body>
     <div id="start-screen">
-      <h1>Zork</h1>
+      <h1>Mort</h1>
       <button>Start Game</button>
     </div>
     <div class="text">
@@ -26,6 +26,6 @@
         <input type="text" class="playerInput" autofocus="true">
       </form>
     </div>
-    <script src="zork-like.js"></script>
+    <script src="mort.js"></script>
   </body>
 </html>
