--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <input type="text" class="playerInput" autofocus="true">
       </form>
     </div>
-    <script src="mort.js"></script>
+    <script src="mort-script.js"></script>
   </body>
 </html>
