--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div>
       <form>
-        <input type="text" class="playerInput" autofocus="true">
+        <input type="text" id="playerInput" autofocus="true">
       </form>
     </div>
     <script src="mort-script.js"></script>
