Completed 'beenHere' counter. Formatted font-size so it's better for mobile devices etc.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
       <span class="plain-text">Lorem Ipsum </span>
       <span class="hint-text">test</span>
     </h2>
-    </div>
-    <div>
-      <form>
-        <input type="text" id="playerInput" autofocus="true">
-      </form>
+    <form class="input-form">
+      <input type="text" id="playerInput" autofocus="true">
+    </form>
     </div>
     <script src="mort-script.js"></script>
   </body>
