Combined 'plain-text' and 'hint-text' into new 'html' property, making it easier to have hints in the middle of sentences. [Consider doing similar thing with transition text???]

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <span class="plain-text">Lorem Ipsum </span>
       <span class="hint-text">test</span>
     </h2>
-    <form class="input-form">
+    <form class="input-form" autocomplete="off">
       <input type="text" id="playerInput" autofocus="true">
     </form>
     </div>
